Placement de figures

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -56,7 +56,7 @@ The main goal of the present study is thus to identify the selection mechanism o
 
 \section*{Pattern formation}
 
-\begin{figure}[b]
+\begin{figure}
 	\includegraphics{acidification}%
 	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syn\ae{}resis and swelling (orange dashed line).}%
 	\label{fig:acidification}%
@@ -201,7 +201,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \subsection*{Microstructure measurement}
 
-\begin{figure}
+\begin{figure}[b]
 	\includegraphics{nonmonotonic}%
 	\caption{Microstructure evolution. (a) Details of confocal images in fully adhesive conditions (top row) and with no adhesion on top (bottom row). Scale bar is \SI{10}{\micro\metre}. Arrows indicates the pore size. (b) Corresponding Fourier spectra in second situation and same times. Lines are fits by Eq.~\ref{eq:fractalS}. (c-d) Evolution of susceptibility and fractal dimension in both situations (black line and orange dashed line respectively). Symbols indicates the times of the images in (a).}%
 	\label{fig:nonmonotonic}%
@@ -218,7 +218,7 @@ Figure~\ref{fig:acidification}c of the main text and Supplementary Fig.~\ref{fig
 
 In situation (i), the gel keeps its topology throughout the gelation and over acidification. Left of Fig.~\ref{fig:nonmonotonic}a shows that the arms of the gel first shrink laterally while keeping their length, and then swell again. Syn\ae{}resis and swelling are thus local processes. By contrast in situation (ii), the gel as a whole compresses while forming. Since our focal plane is a fixed depth, we cannot follow the topology of the same subset of the network, however the pore size is clearly smaller than in situation (ii). The isoelectric gel, at minimum gel volume, is probably isotropic or only marginally anisotropic in $z$. This explains that subsequent swelling is not occurring only along $z$ but also in plane, causing buckling.
 
-$\xi$ was also systematically measured in the same way at the end of each wrinkling experiment and reported in table~\ref{tab:data}. %Final fractal dimension was always close to 2 within error bars. Comparing $\chi$ across different setting of the microscope is not relevant.
+$\xi$ was also systematically measured in the same way at the end of each wrinkling experiment and reported in Table~\ref{tab:data} of the main text. %Final fractal dimension was always close to 2 within error bars. Comparing $\chi$ across different setting of the microscope is not relevant.
 
 
 
