--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -73,7 +73,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{Measurements and modeling. (a) Confocal ($x$,$z$) cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times in (a). (d) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
+	\caption{Measurements and modeling. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray. (c-d) Confocal microscopy measurement of the volume of the gel phase relative to cell volume and excess area. Crosses correspond to times in (a).}
 	\label{fig:sideview}
 \end{figure}
 
@@ -94,7 +94,7 @@ We identify three possible candidates for the transverse load $\sigma_\perp$: th
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
-	\caption{Comparing model predictions with measured wavelengths. Dots come from primary pattern, squares from secondary blisters. Dashed lines are the best linear fit through the origin taking only into account the points that should be (a) in Darcy mode $H<H^*$, (b) in Poiseuille mode $H>H^*$ (c) all points. Prefactors are 0.63, 0.69 and 0.67 respectively. Continuous line is the best affine fit ($\lambda_{\rm exp}=0.52\lambda_{P}+\SI{0.33}{\milli\metre}$) to all the points in (b).}
+	\caption{Comparing model predictions with measured wavelengths. Dots come from primary pattern, squares from secondary blisters. Lines are the best linear fit through the origin taking only into account the points that should be (a) in Darcy mode $H<H^*$, (b) in Poiseuille mode $H>H^*$ (c) all points. Prefactors are 0.63, 0.69 and 0.67 respectively. The dashed line is the best affine fit ($\lambda_{\rm exp}=0.52\lambda_{P}+\SI{0.33}{\milli\metre}$) to all the points in (b).}
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
@@ -126,7 +126,7 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 %\toprule
 \multicolumn{4}{c}{Preparation} & &  \multicolumn{4}{c}{Properties} & & \multicolumn{4}{c}{Measurements} & & \multicolumn{6}{c}{Results} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v$} && {$\Upsilon$} & {$H/H^*$} & {$\lambda_{xp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
+{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v_\text{max}$} && {$\Upsilon$} & {$H/H^*$} & {$\lambda_\text{exp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
 {\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
 %ech2
@@ -146,7 +146,7 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.13 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
 4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 1.52 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
 \end{tabular}
-\caption{Characteristics of the samples discussed in the main text. Lines where preparation and properties are left blank correspond to the average of the secondary blisters of the previous line.}
+\caption{Fully characterised samples at the basis of Fig.~\ref{fig:DarcyPoiseuille}. Lines where preparation and properties are left blank correspond to the average of the secondary blisters of the previous line. `cas', `GDL' and `gly' indicate the weight fraction of sodium caseinate, GDL and glycerol respectively. $\xi$ is the pore size at the end of each experiment.}
 \label{tab:data}
 \end{table*}
 
@@ -203,7 +203,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \begin{figure}[b]
 	\includegraphics{nonmonotonic}%
-	\caption{Microstructure evolution. (a) Details of confocal images in fully adhesive conditions (top row) and with no adhesion on top (bottom row). Scale bar is \SI{10}{\micro\metre}. Arrows indicates the pore size. (b) Corresponding Fourier spectra in second situation and same times. Lines are fits by Eq.~\ref{eq:fractalS}. (c-d) Evolution of susceptibility and fractal dimension in both situations (black line and orange dashed line respectively). Symbols indicates the times of the images in (a).}%
+	\caption{Microstructure evolution. (a) Details of confocal images in fully adhesive conditions (top row) and with no adhesion on top (bottom row). The scale bar is \SI{10}{\micro\metre}. Arrows indicates the pore size. (b) Corresponding Fourier spectra in second situation and same times. Lines are fits by Eq.~\ref{eq:fractalS}. (c-d) Evolution of susceptibility and fractal dimension in both situations (black line and orange dashed line respectively). Symbols indicates the times of the images in (a).}%
 	\label{fig:nonmonotonic}%
 \end{figure}
 
@@ -377,13 +377,13 @@ and we minimize this expression numerically.
 
 \begin{figure}
 	\includegraphics{generations}%
-	\caption{Fourier spectra of binary altitudes of Main Fig.~\ref{fig:dynamics}a corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars is \SI{1}{\milli\metre}.}%
+	\caption{Fourier spectra of binary altitudes of Main Fig.~\ref{fig:dynamics}a corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. The scale bar is \SI{1}{\milli\metre}.}%
 	\label{fig:generations}%
 \end{figure}
 
 \begin{figure*}
 	\includegraphics{patterns}
-	\caption{Patterns corresponding to the samples of Table~\ref{tab:data} of the main text. (a-d) increasing cell thickness. (e-f) larger solid content. (g-i) increasing glycerol content. All pictures are stitching of fluorescent microscopy images except (c,e) which are details of reflected light macroscope images. Scale is common to all panels (scale bar \SI{1}{\milli\metre}). Length of arrows correspond to the measured primary wavelength.}
+	\caption{Patterns corresponding to the samples of Table~\ref{tab:data} of the main text. (a-d) increasing cell thickness. (e-f) larger solid content. (g-i) increasing glycerol content. All pictures are stitching of fluorescent microscopy images except (c,e) which are details of reflected light macroscope images. The scale is common to all panels (scale bar \SI{1}{\milli\metre}). Length of arrows correspond to the measured primary wavelength.}
 	\label{fig:patterns}
 \end{figure*}
 
@@ -394,7 +394,7 @@ Figure~\ref{fig:generations} shows Fourier spectra of binarised altitudes at dif
 \subsection*{Characteristic time measurement}
 \begin{figure}
 	\includegraphics{growth}
-	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ averaged over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. Thick black curve is the profile at much longer times. Note that the blister foot, highlighted by the orange vertical line, has not moved since contact.}
+	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ averaged over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. The black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. The thick black curve is the profile at much longer times and is at lower altitude due to swelling. Note that the blister foot, highlighted by the orange vertical line, has not moved since contact.}
 	\label{fig:growth}
 \end{figure}
 
@@ -405,7 +405,7 @@ We note that when both measurements were available (as in Fig.~\ref{fig:growth}a
 \subsection*{Permeability measurements}
 \begin{figure*}
 	\includegraphics{permeability}
-	\caption{Permeability measurements. (a) Schematic representation of the experiment. (b-c) Evolution of the height of the interface in tube 1 relative to the final height in tube 2. Black line is the best exponential fit $Ae^{-t/\tau}$. (b) Gel is 4\%w casein, 4\%w GDL in water, $H=\SI{2.3}{\milli\metre}$ and $\tau=\SI{57}{\minute}$. (c) Same as (b) for a 50\%w glycerol--water mixture, $H=\SI{4}{\milli\metre}$ and $\tau=\SI{100}{\hour}$.}
+	\caption{Permeability measurements. (a) Schematic representation of the experiment. (b-c) Evolution of the height of the interface in tube 1 relative to the final height in tube 2. The black line is the best exponential fit $Ae^{-t/\tau}$. (b) Gel is 4\%w casein, 4\%w GDL in water, $H=\SI{2.3}{\milli\metre}$ and $\tau=\SI{57}{\minute}$. (c) Same as (b) for a 50\%w glycerol--water mixture, $H=\SI{4}{\milli\metre}$ and $\tau=\SI{100}{\hour}$.}
 	\label{fig:permeability}
 \end{figure*}
 
